--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,282 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+.container {
+	display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+	width: 900px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+@media( max-width: 500px ) {
+    .container {
+        flex-direction: column;
+      }
+}
+
+@media( max-width: 800px ) {
+    .container {
+        flex-direction: column;
+      }
+}
+
+
+.nav	{
+	display: flex;
+	flex-direction: row;
+	align-items: baseline;
+	margin-bottom: 80px;
+	font-size: large;
+	width: 100%;
+}
+
+.nav a {
+	margin-left: 40px;
+	margin-top: 30px;
+	color: gray;
+	text-decoration: none;	
+}
+
+.nav img {
+	display: flex;
+	margin-left: 100px;
+	margin-top: 30px;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+	flex-wrap: nowrap;
+	align-items: center;
+	margin-bottom: 40px;
+}
+
+/* display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin-bottom: 40px;
+    width: 95%; */
+
+.box-a {
+	display: flex;
+    flex-direction: column;
+    width: 50%;
+    flex-wrap: nowrap;
+	align-items: center;
+}
+
+header h1 {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    letter-spacing: 1.5px;
+    font-size: 85px;
+    text-align: center;
+
+}
+	
+button {
+
+	display: flex;
+    justify-content: center;
+    width: 150px;
+    background: white;
+    border: solid 1px;
+    letter-spacing: .5pt;
+	font-size: medium;
+	font-family: 'Titillium Web', sans-serif;
+}
+
+.box-b {
+	display: flex;
+    flex-direction: column;
+	flex-wrap: nowrap;
+	margin-left: auto;
+}	
+
+/* .header-img {
+	display: flex;
+	margin-right: 30px
+} */
+
+.top-content {
+	/* column-count: 2; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.top-content .features {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	width: 50%;
+}
+
+.top-content .about {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	width: 50%;
+
+}
+
+.middle-img {
+	display: flex;
+	width: 100%;
+	margin-bottom: 30px;
+}
+
+/* .bottom-content {
+	display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+	justify-content: flex-start;
+} */
+
+.bottom-content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+	margin-top: 30px;
+	justify-content: space-evenly;
+	/* border: 1px solid red; */
+}
+
+.bottom-content .services {
+	display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+	width: 30%;
+}
+
+.bottom-content .product {
+	display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+	width: 30%;
+}
+
+.bottom-content .vision {
+	display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+	width: 30%;
+}
+
+hr {
+	display: flex;
+	flex-wrap: nowrap;
+    color: black;
+    height: 1px;
+    width: 100%;
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: flex-start;
+	margin-top: 30px;
+	width: 30%;
+}
+
+.info .street {
+	display: flex;
+	flex-direction: column;
+	line-height: 1;
+}
+.info .phone {
+	display: flex;
+	flex-direction: column;
+	margin-top: 10px;
+	/* margin-bottom: 20px; */
+}
+
+.info .email {
+	display: flex;
+	flex-direction: column;
+	margin-top: 10px;
+}
+
+.footer {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	margin-top: 75px;
+    text-align: center;
+}
+
