--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,3 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
-
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -66,8 +63,7 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-/* Copy and paste your work from yesterday here and start to refactor into flexbox */
-
+/* Use your own code or past solution for Great Idea Web Page CSS here! */
 .container {
 	display: flex;
     flex-direction: column;
@@ -77,18 +73,137 @@ h1, h2, h3, h4, h5 {
 	margin-right: auto;
 }
 
-@media( max-width: 500px ) {
+@media(max-width: 500px) {
+
     .container {
+        display: flex;
         flex-direction: column;
-      }
+    }
+  
+    .container .nav {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      line-height: 2;
+
+      /* border: solid 1px red; */
+    }
+
+    .container .nav .logo {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        order: -1;
+        margin: auto;
+        width: 20%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+  
+    .container .nav a {
+      /* margin-bottom: 20px; */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* justify-content: center; */
+      margin: auto;
+      font-size: x-large;
+      border: solid 1px black;
+      width: 100%;
+
+    }
+
+    .container .header {
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        justify-content: center;
+    }
+
+    .box-a {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        align-content: center;
+    }
+
+    .box-a .get-started {
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        align-items: center;
+        /* align-content: center; */
+    }
+
+    .box-b {
+        display: none;
+        flex-direction: column;
+    }
+
+    .box-b .header-img  {
+        display: none;
+        width: 0%
+    }
+
+    body .top-content  {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        margin: auto;
+        align-items: center;
+        height: auto;
+    }
+
+    body .top-content .features {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 95%;
+        margin: auto;
+        align-items: flex-start;
+    }
+
+    body .top-content .about {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 95%;
+        margin-bottom: 20px;
+    }
+
+    img.middle-img {
+        display: flex;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .bottom-content {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin-bottom: 30px;
+        margin-top: 30px;
+        justify-content: space-evenly;
+    }
+
+
 }
 
-@media( max-width: 800px ) {
+
+/* @media( max-width: 800px ) {
     .container {
         flex-direction: column;
-      }
-}
+        flex-wrap: nowrap;
+        
+    } 
+} */
 
+.img {
+    width: 100%;
+    height: auto;
+}
 
 .nav	{
 	display: flex;
@@ -168,6 +283,10 @@ button {
 	display: flex;
 	margin-right: 30px
 } */
+
+.main-content {
+
+}
 
 .top-content {
 	/* column-count: 2; */
@@ -279,4 +398,3 @@ hr {
 	margin-top: 75px;
     text-align: center;
 }
-
