--- a/css/index.css
+++ b/css/index.css
@@ -64,20 +64,13 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
-.container {
-	display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-	width: 900px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
+/* mobile layout here ********************************************************/
 @media(max-width: 500px) {
 
     .container {
         display: flex;
         flex-direction: column;
+        max-width: 500px;
     }
   
     .container .nav {
@@ -86,8 +79,9 @@ h1, h2, h3, h4, h5 {
       justify-content: center;
       width: 100%;
       line-height: 2;
+      margin: auto;
+      margin-bottom: 40px;
 
-      /* border: solid 1px red; */
     }
 
     .container .nav .logo {
@@ -96,7 +90,7 @@ h1, h2, h3, h4, h5 {
         align-self: center;
         order: -1;
         margin: auto;
-        width: 20%;
+        width: 50%;
         margin-top: 20px;
         margin-bottom: 20px;
     }
@@ -106,42 +100,50 @@ h1, h2, h3, h4, h5 {
       display: flex;
       flex-direction: column;
       align-items: center;
-      /* justify-content: center; */
+      align-content: center;
+      justify-content: center;
       margin: auto;
       font-size: x-large;
-      border: solid 1px black;
+      border-top: solid 0.5px black;
+      border-bottom: solid 0.5px black;
       width: 100%;
+      height: 90px;
 
     }
 
-    .container .header {
+    body .container header {
         display: flex;
         flex-direction: column;
-        width: auto;
+        width: 100%;
         justify-content: center;
     }
 
-    .box-a {
+    body .box-a h1 {
         display: flex;
         flex-direction: column;
         margin: auto;
-        align-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: center;
+        font-size: 75px;
     }
 
-    .box-a .get-started {
+    body .box-a .get-started {
         display: flex;
         flex-direction: column;
         margin: auto;
         align-items: center;
-        /* align-content: center; */
+        width: 180px;
+        height: 60px;
+        font-size: larger;
     }
 
-    .box-b {
+    body .box-b {
         display: none;
         flex-direction: column;
     }
 
-    .box-b .header-img  {
+    body .box-b .header-img  {
         display: none;
         width: 0%
     }
@@ -151,54 +153,152 @@ h1, h2, h3, h4, h5 {
         flex-direction: column;
         flex-wrap: nowrap;
         width: 100%;
-        margin: auto;
+        margin: 25px 25px 25px 25px;
         align-items: center;
-        height: auto;
     }
 
     body .top-content .features {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
-        width: 95%;
+        flex-wrap: nowrap;
+        width: 100%;
         margin: auto;
-        align-items: flex-start;
+    }
+
+    body .top-content .features h2,p {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        font-size: larger;
+        margin-bottom: 20px;
+        /* margin-top: 20px; */
     }
 
     body .top-content .about {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
-        width: 95%;
-        margin-bottom: 20px;
+        flex-wrap: nowrap;
+        width: 100%;
+        margin: auto;
     }
 
-    img.middle-img {
+    body .top-content .about  h2,p {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 95%;
+        font-size: larger;
+        margin-bottom: 20px;
+        /* margin-top: 20px; */
+    }
+
+    body .middle-img {
         display: flex;
         width: 100%;
-        margin-bottom: 30px;
+        margin-left: 20px;
+        margin-right: 20px;
+        /* margin: 20px 20px 20px 20px; */
     }
 
-    .bottom-content {
+    body .bottom-content {
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
-        margin-bottom: 30px;
-        margin-top: 30px;
-        justify-content: space-evenly;
+        width: 100%;
+        margin: 25px 25px 25px 25px;
+        align-items: center;
     }
 
-
-}
-
-
-/* @media( max-width: 800px ) {
-    .container {
+    body .bottom-content .services {
+        display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
-        
-    } 
+        width: 100%;
+        margin: auto;
+    }
+
+    body .bottom-content .services h2,p {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        font-size: larger;
+        margin-bottom: 20px;
+        /* margin-top: 20px; */
+    }
+
+    body .bottom-content .product {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        margin: auto;
+    }
+
+    body .bottom-content .product h2,p {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        font-size: larger;
+        margin-bottom: 20px;
+        /* margin-top: 10px; */
+    }
+
+    body .bottom-content .vision {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        margin: auto;
+    }
+
+    body .bottom-content .vision h2,p {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        font-size: larger;
+        margin-bottom: 20px;
+        /* margin-top: 20px; */
+    }
+
+    body .info {
+        display: flex;
+        flex-direction: column;
+        margin: 20px 0px 20px 20px;
+        font-size: larger;
+    }
+
+    body .footer {
+    display: flex;
+    flex-direction: column;
+    font-size: larger;
+    align-items: center;
+    }
+
+}
+}
+
+/* tablet layout here **************************************************/
+/* @media(max-width: 800px) {
+
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
 } */
+
+/* desktop layout here **************************************************/
+.container {
+	display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+	width: 900px;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 .img {
     width: 100%;
