--- a/css/index.css
+++ b/css/index.css
@@ -66,14 +66,11 @@ h1, h2, h3, h4, h5 {
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 /* desktop layout here ***********************/
+
 .container {
-	display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-	width: 900px;
-	margin-left: auto;
-	margin-right: auto;
-}
+    width: 900px;
+    margin: 0 auto;
+  }
 
 .img {
     width: 100%;
@@ -90,16 +87,17 @@ h1, h2, h3, h4, h5 {
 }
 
 .nav a {
-	margin-left: 40px;
-	margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    margin: 20px auto;
+    align-items: baseline;
 	color: gray;
-	text-decoration: none;	
+	text-decoration: none;
 }
 
-.nav img {
-	display: flex;
-	margin-left: 100px;
-	margin-top: 30px;
+.nav .logo {
+    display: flex;
+    margin: auto;
 }
 
 header {
@@ -147,11 +145,6 @@ button {
 	margin-left: auto;
 }	
 
-/* .header-img {
-	display: flex;
-	margin-right: 30px
-} */
-
 .top-content {
 	/* column-count: 2; */
     display: flex;
@@ -181,13 +174,6 @@ button {
 	width: 100%;
 	margin-bottom: 30px;
 }
-
-/* .bottom-content {
-	display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-	justify-content: flex-start;
-} */
 
 .bottom-content {
     display: flex;
@@ -269,12 +255,102 @@ hr {
     .container {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        max-width: 800px;
     }
-    
+
+    .container .nav {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        /* line-height: 2;
+        margin-bottom: 5%; */
+  
+    }
+
+    .container .nav .logo {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        order: -1;
+        margin: 2% 38%;
+    }
+
+    .container .nav a {
+        /* margin-bottom: 20px; */
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: auto;
+        font-size: large;
+        border: 1px solid red;
+
+    }
+
+    body .box-a {
+        display: flex;
+        flex-direction: column;
+        margin: 1% auto;
+        border: solid red 1px;
+
+    }
+
     body .box-b {
     display: none;
     flex-direction: column;
     }
+
+    .top-content {
+        /* column-count: 2; */
+        display: flex;
+        width: 98%;
+        /* flex-direction: row;
+        flex-wrap: wrap; */
+        /* margin-bottom: 30px;
+        margin-top: 30px; */
+    }
+    
+    .top-content .features {
+        display: flex;
+        width: 40%;
+        margin: 0% 5% 0% 5%;
+    }
+    
+    .top-content .about {
+        display: flex;
+        width: 40%;
+        margin: 0% 1% 0% 3%
+    }
+    
+    .bottom-content {
+        display: flex;
+        justify-content: space-evenly;
+        border: 1px solid red;
+        width: 98%;
+    }
+
+    .bottom-content .services {
+        display: flex;
+        justify-content: space-evenly;
+        width: 30%;
+        border: 1px solid red;
+    }
+
+    .bottom-content .product {
+        display: flex;
+        justify-content: space-evenly;
+        width: 30%;
+        border: 1px solid red;
+    }
+
+    .bottom-content .vision {
+        display: flex;
+        justify-content: space-evenly;
+        width: 30%;
+        border: 1px solid red;
+    }
+
 }
 
 /* mobile layout here ************************/
