--- a/css/index.css
+++ b/css/index.css
@@ -284,7 +284,7 @@ hr {
         flex-wrap: wrap;
         margin: auto;
         font-size: large;
-        border: 1px solid red;
+        /* border: 1px solid red; */
 
     }
 
@@ -292,7 +292,7 @@ hr {
         display: flex;
         flex-direction: column;
         margin: 1% auto;
-        border: solid red 1px;
+        /* border: solid red 1px; */
 
     }
 
@@ -326,7 +326,7 @@ hr {
     .bottom-content {
         display: flex;
         justify-content: space-evenly;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         width: 98%;
     }
 
@@ -334,21 +334,21 @@ hr {
         display: flex;
         justify-content: space-evenly;
         width: 30%;
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
 
     .bottom-content .product {
         display: flex;
         justify-content: space-evenly;
         width: 30%;
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
 
     .bottom-content .vision {
         display: flex;
         justify-content: space-evenly;
         width: 30%;
-        border: 1px solid red;
+        /* border: 1px solid red; */
     }
 
 }
@@ -403,8 +403,8 @@ hr {
     body .container header {
         display: flex;
         flex-direction: column;
-        width: 100%;
-        justify-content: center;
+        width: 98%;
+        margin: 5% 0% 5% 0%;
     }
 
     body .box-a h1 {
@@ -440,10 +440,12 @@ hr {
     body .top-content  {
         display: flex;
         flex-direction: column;
-        flex-wrap: nowrap;
+        width: 98%;
+        margin: 0% auto;
+        /* flex-wrap: nowrap;
         width: 100%;
         margin: 25px 25px 25px 25px;
-        align-items: center;
+        align-items: center; */
     }
 
     body .top-content .features {
@@ -485,18 +487,18 @@ hr {
     body .middle-img {
         display: flex;
         width: 100%;
-        margin-left: 20px;
-        margin-right: 20px;
-        /* margin: 20px 20px 20px 20px; */
+
     }
 
     body .bottom-content {
         display: flex;
         flex-direction: column;
-        flex-wrap: nowrap;
+        width: 98%;
+        margin: 0% auto;
+        /* flex-wrap: nowrap;
         width: 100%;
         margin: 25px 25px 25px 25px;
-        align-items: center;
+        align-items: center; */
     }
 
     body .bottom-content .services {
